tests/unit/language/errors/reuse_after_move_slice_rejected.arche
// Moving an owned buffer into a slice param consumes the source binding — that is what makes a mutable
// slice single-writer and aliasing-free. Using the buffer again after the move is rejected: there is
// only ever one live owner of a mutable slice.
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "consumed" %t.out
#import { fmt }
take :: func(own xs: int[]) -> int {
  return xs.length;
}

main :: proc() {
  a: int[2];
  n := take(move a);
  m := take(move a);
  fmt.printf("%d %d\n", n, m);
}
